# tflite

./: .gitattributes  Cargo.toml  Readme.md  pyproject.toml  test.py
src/: lib.rs  main.rs
test_data/: hey_mycroft.tflite  hey_mycroft.tflite.params
